# probex

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  flake.nix  plan.md
.github/workflows/: ci.yml  release.yml
.zed/: settings.json
doc/: custom-probes.md
nix/: package.nix
probex/: Cargo.toml  build.rs
probex-common/: Cargo.toml  README.md
probex-common/src/: lib.rs
probex-ebpf/: Cargo.toml  README.md
probex-ebpf/src/: main.rs
probex-viewer/: Cargo.toml  Dioxus.toml  README.md  tailwind.css
probex-viewer/src/: api.rs  app.rs  main.rs
probex-viewer/src/app/: formatting.rs  view_model.rs
probex-viewer/src/app/components/: echart.rs  event_list.rs  flamegraph.rs  header.rs  io_statistics.rs  mod.rs  probe_catalog.rs  process_timeline.rs
probex-viewer/src/app/components/process_timeline/: mod.rs  process_activity.rs  process_tree.rs  timeline_overview.rs
probex/src/: args.rs  custom_codegen.rs  ebpf.rs  event.rs  main.rs  parsing.rs  privileged_daemon.rs  process.rs  schema.rs  stacks.rs  trace_privilege.rs  tracepoint_format.rs  unix_fd.rs  viewer_backend.rs  viewer_privileged_daemon_client.rs  viewer_probe_catalog.rs  viewer_server.rs  viewer_trace_runtime.rs  writer.rs
probex/tests/: integration_test.rs
snitch/: Cargo.toml  build.rs
snitch-common/: Cargo.toml
snitch-common/src/: lib.rs
snitch-ebpf/: Cargo.toml
snitch-ebpf/src/: main.rs
snitch-viewer/: Cargo.toml  Dioxus.toml  tailwind.css
snitch-viewer/src/: app.rs  main.rs  server.rs  ui.rs
snitch-viewer/src/app/: formatting.rs  view_model.rs
snitch-viewer/src/app/components/: events_table.rs  flamegraph.rs  header.rs  mod.rs  pagination.rs  pid_panel.rs  process_timeline.rs
snitch/src/: main.rs  viewer_backend.rs  viewer_server.rs
snitch/tests/: integration_test.rs
