[package]
name = "probex-common"
version = "0.1.14"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/probex-common"
description = "Shared event types for probex user and eBPF components"

[features]
default = []
std = []
viewer-api = ["serde", "std"]
user = ["aya", "viewer-api"]

[dependencies]
aya = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[lib]
path = "src/lib.rs"
