[package]
name = "probex-common"
version = "0.1.18"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
documentation = "https://docs.rs/probex-common"
description = "Shared type definitions between eBPF and userspace components of probex"

[features]
default = []
std = []
viewer-api = ["serde", "std"]
user = ["aya", "viewer-api"]

[dependencies]
aya = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[lib]
path = "src/lib.rs"
