[package]
name = "probex-ebpf"
version = "0.1.15"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/probex-ebpf"
description = "eBPF programs used by the probex profiler"

[dependencies]
probex-common = { path = "../probex-common", version = "0.1.15" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "probex"
path = "src/main.rs"
