[package]
name = "probex-viewer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
documentation = "https://docs.rs/probex-viewer"
description = "Web-based trace viewer for probex"

[[bin]]
name = "probex-viewer"
path = "src/main.rs"

[dependencies]
probex-common = { path = "../probex-common", features = ["viewer-api"] }
dioxus = { workspace = true, features = [
    "web",
    "launch",
    "asset",
    "mounted",
    "macro",
    "hooks",
    "signals",
    "html",
    "document",
] }
charming = { workspace = true }
serde = { workspace = true, features = ["derive"] }
log.workspace = true
gloo-net = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
futures-util = "0.3"
