[package]
name = "snitch-common"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/snitch-common"
description = "Shared event types for snitch user and eBPF components"

[features]
default = []
user = ["aya", "serde"]

[dependencies]
aya = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[lib]
path = "src/lib.rs"
