[package]
name = "snitch-ebpf"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/snitch-ebpf"
description = "eBPF programs used by the snitch profiler"

[dependencies]
snitch-common = { path = "../snitch-common", version = "0.1.0" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "snitch"
path = "src/main.rs"
