[package]
name = "snitch-viewer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Web-based visualization for snitch trace files"

[[bin]]
name = "snitch-viewer"
path = "src/main.rs"

[dependencies]
dioxus = { workspace = true, features = [
    "web",
    "launch",
    "asset",
    "macro",
    "hooks",
    "signals",
    "html",
    "document",
] }
serde = { workspace = true, features = ["derive"] }
log.workspace = true
gloo-net = "0.6"
