[package]
name = "snitch-viewer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/snitch-viewer"
description = "Web-based visualization for snitch trace files"

[[bin]]
name = "snitch-viewer"
path = "src/main.rs"

[dependencies]
dioxus = { workspace = true, features = [
    "web",
    "launch",
    "asset",
    "mounted",
    "macro",
    "hooks",
    "signals",
    "html",
    "document",
] }
serde = { workspace = true, features = ["derive"] }
log.workspace = true
gloo-net = "0.6"
